--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "barrel": ""
+    "barrel": "barrelsby -d src",
     "build": "vue-cli-service build --target lib --name alchemist.core src/index.ts"
   },
   "dependencies": {
     "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^7.1.1",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1",
     "interactjs": "^1.3.4",
@@ -18,14 +18,18 @@
     "treacherous": "^0.17.6",
     "treacherous-vue": "^0.3.1",
     "electron": "^2.0.9",
-    "treacherous-decorators": "^0.2.1"
+    "treacherous-decorators": "^0.2.1",
+    "fs-extra": "^7.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-typescript": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "typescript": "^3.0.0",
+    "@types/vue": "^2.0.0",
+    "@types/uuid": "^3.4.4",
+    "@types/fs-extra": "^5.0.4",
+    "@vue/cli-plugin-typescript": "^3.0.4",
+    "@vue/cli-service": "^3.0.4",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "typescript": "^3.0.3",
     "vue-template-compiler": "^2.5.17",
     "barrelsby": "^1.0.2"
   }
