--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alchemist/core",
+  "name": "@alchemist-editor/core",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,16 +15,13 @@
     "vuex-class": "^0.3.1",
     "interactjs": "^1.3.4",
     "uuid": "^3.3.2",
-    "treacherous": "^0.17.6",
-    "treacherous-vue": "^0.3.1",
-    "electron": "^2.0.9",
-    "treacherous-decorators": "^0.2.1",
-    "fs-extra": "^7.0.0"
+    "@treacherous/core": "^0.17.6",
+    "@treacherous/vue": "^0.3.2",
+    "@treacherous/decorators": "^0.2.3"
   },
   "devDependencies": {
     "@types/vue": "^2.0.0",
     "@types/uuid": "^3.4.4",
-    "@types/fs-extra": "^5.0.4",
     "@vue/cli-plugin-typescript": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
     "node-sass": "^4.9.3",
