--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "readme.md"
   ],
   "dependencies": {
-    "@treacherous/core": "^0.17.6",
+    "@treacherous/core": "^0.17.7",
     "@treacherous/decorators": "^0.2.3",
-    "@treacherous/vue": "^0.3.2",
+    "@treacherous/vue": "^0.3.3",
     "interactjs": "^1.3.4",
     "tslib": "^1.9.3",
     "uuid": "^3.3.2",
     "vue": "^2.5.17",
-    "vue-class-component": "^6.2.0",
+    "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^7.2.0",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1"
@@ -30,13 +30,13 @@
   "devDependencies": {
     "@types/uuid": "^3.4.4",
     "@types/vue": "^2.0.0",
-    "@vue/cli-plugin-typescript": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
+    "@vue/cli-plugin-typescript": "^3.1.1",
+    "@vue/cli-service": "^3.1.4",
     "barrelsby": "^1.0.2",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.1.3",
-    "vue-template-compiler": "^2.5.17",
-    "ts-loader": "^5.2.1"
+    "ts-loader": "^5.3.0",
+    "typescript": "^3.1.6",
+    "vue-template-compiler": "^2.5.17"
   }
 }
