--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/alchemist/alchemist-core",
   "scripts": {
     "barrel": "barrelsby -c barrel.config.json",
-    "build": "vue-cli-service build --target lib --name alchemist.core src/index.ts"
+    "build": "webpack"
   },
   "files": [
     "dist/**/*",
@@ -21,7 +21,7 @@
     "interactjs": "^1.3.4",
     "tslib": "^1.9.3",
     "uuid": "^3.3.2",
-    "vue": "^2.5.17",
+    "vue": "^2.5.22",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^7.2.0",
     "vuex": "^3.0.1",
@@ -30,13 +30,17 @@
   "devDependencies": {
     "@types/uuid": "^3.4.4",
     "@types/vue": "^2.0.0",
-    "@vue/cli-plugin-typescript": "^3.1.1",
-    "@vue/cli-service": "^3.1.4",
     "barrelsby": "^1.0.2",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
+    "css-loader": "^2.1.0",
     "sass-loader": "^7.1.0",
-    "ts-loader": "^5.3.0",
-    "typescript": "^3.1.6",
-    "vue-template-compiler": "^2.5.17"
+    "ts-loader": "^5.3.3",
+    "vue-loader": "^15.6.2",
+    "vue-style-loader": "^4.1.2",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "typescript": "^3.2.4",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   }
 }
